[package]
name = "rustis"
version = "0.1.0"
keywords = ["redis", "database", "async", "cluster", "sentinel"]
categories = ["database", "asynchronous"]
description = "Redis async driver for Rust"
homepage = "https://github.com/dahomey-technologies/rustis"
repository = "https://github.com/dahomey-technologies/rustis"
documentation = "https://docs.rs/rustis"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio/macros", "tokio/net", "tokio/rt", "tokio/io-util"]
tokio-rustls = ["dep:tokio-rustls", "dep:webpki-roots", "rustls"]
tokio-native-tls = ["dep:tokio-native-tls", "native-tls"]
async-std-runtime = [
    "dep:async-std",
    "async-std/attributes",
    "tokio-util/compat",
]
async-std-native-tls = ["dep:async-native-tls", "native-tls"]
pool = ["dep:bb8"]
native-tls = ["dep:native-tls"]
rustls = ["dep:rustls"]
redis-graph = []

[dependencies]
async-std = { version = "1.13", features = ["attributes"], optional = true }
futures-util = { version = "0.3", features = ["sink", "io"] }
futures-channel = { version = "0.3", features = ["sink"] }
bytes = "1.10"
tokio = { version = "1.46", features = ["time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
atoi = "2.0"
itoa = "1.0"
fast-float2 = "0.2"
dtoa = "1.0"
smallvec = { version = "1.15", features = ["union", "serde"] }
bb8 = { version = "0.9", optional = true }
url = "2.5"
tokio-rustls = { version = "0.26", optional = true }
webpki-roots = { version = "1.0", optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
async-native-tls = { version = "0.5", optional = true }
log = "0.4"
crc16 = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.6"
memchr = "2.7"

[dev-dependencies]
serial_test = "3.2"
tokio = { version = "1.46", features = ["rt-multi-thread"] }
rand = "0.9"
env_logger = "0.11"
smallvec = { version = "1.15", features = ["serde"] }
criterion = "0.6"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
fred = "10.1"
axum = "0.8"
actix-web = "4.11"
rustls-pemfile = "2.2"

[package.metadata.docs.rs]
features = ["tokio-runtime", "tokio-rustls", "pool"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "generic_api"
harness = false

[[bench]]
name = "native_api"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "multiplexer"
harness = false

[[example]]
name = "simple"

[[example]]
name = "cbor"

[[example]]
name = "axum_crud"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
